--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- ===== HERO SECTION WITH IMAGE ===== -->
     <section class="hero">
         <!-- Update this with your GitHub folder's relative path to the image -->
-        <img src="images/isi.jpg" alt="Inter-Services Intelligence">
+        <img src="isi.jpg" alt="Inter-Services Intelligence">
         <h1>Welcome to My Website</h1>
         <p>Discover my projects, skills, and creative work</p>
     </section>
